--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
     "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
     "baseUrl": "src" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
-      "@config/*": ["./config/*"]
+      "@config/*": ["./config/*"],
+      "@shared/*": ["./shared/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     "typeRoots": [
