added healthcheck, code refactored

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
@@ -31,7 +32,9 @@
     "baseUrl": "src" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
       "@config/*": ["./config/*"],
-      "@shared/*": ["./shared/*"]
+      "@shared/*": ["./shared/*"],
+      "@controllers/*": ["./controllers/*"],
+      "@services/*": ["./services/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     "typeRoots": [
