--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "dotenv": "16.0.2",
     "express": "4.18.1",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "0.1.13",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.0"
   },
