--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "dependencies": {
     "dotenv": "16.0.2",
     "express": "4.18.1",
-    "reflect-metadata": "0.1.13",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.0"
   },
@@ -31,6 +30,7 @@
     "@types/express": "4.17.14",
     "@types/node": "18.7.18",
     "nodemon": "2.0.20",
+    "reflect-metadata": "^0.1.13",
     "typescript": "4.8.3"
   }
 }
