--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
   "dependencies": {
     "dotenv": "16.0.2",
     "express": "4.18.1",
+    "swagger-jsdoc": "6.2.5",
+    "swagger-ui-express": "4.5.0",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.0"
   },
   "devDependencies": {
     "@types/express": "4.17.14",
     "@types/node": "18.7.18",
+    "@types/swagger-jsdoc": "6.0.1",
+    "@types/swagger-ui-express": "4.1.3",
     "nodemon": "2.0.20",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "0.1.13",
     "typescript": "4.8.3"
   }
 }
