--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,9 +32,14 @@
     "baseUrl": "src" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
       "@config/*": ["./config/*"],
-      "@shared/*": ["./shared/*"],
       "@controllers/*": ["./controllers/*"],
-      "@services/*": ["./services/*"]
+      "@services/*": ["./services/*"],
+      "@classes/*": ["./shared/classes/*"],
+      "@constants/*": ["./shared/constants/*"],
+      "@decorators/*": ["./shared/decorators/*"],
+      "@enums/*": ["./shared/enums/*"],
+      "@interfaces/*": ["./shared/interfaces/*"],
+      "@swagger/*": ["./shared/swagger/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     "typeRoots": [
@@ -46,7 +51,7 @@
     ] /* Specify type package names to be included without being referenced in a source file. */,
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
-    // "resolveJsonModule": true,                        /* Enable importing .json files. */
+    "resolveJsonModule": true /* Enable importing .json files. */,
     // "noResolve": true,                                /* Disallow 'import's, 'require's or '<reference>'s from expanding the number of files TypeScript should add to a project. */
 
     /* JavaScript Support */
